# valadoc-org

./: .babelrc  .dockerignore  .editorconfig  .eslintrc.js  .gitignore  .gitmodules  .travis.yml  Dockerfile  Dockerfile-valadoc  Makefile  README.md  Vagrantfile  apache.conf  build.sh  docker-server.sh  gulpfile.babel.js  meson.build  meson_options.txt  package-lock.json  package.json  valadoc-spec.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  nodejs.yml  publish.yml  vala.yml
data/: .htaccess  about.htm.content.tpl  index.php  jquery.spinner.js  markup.htm.content.tpl  markup.html  opensearch.xml  router.php  search.php  style.css  tooltip.php  valadoc.js  wikistyle.css  wtooltip.js  wtooltip.min.js
data/scripts/: jquery.spinner.js  main.js  valadoc.babel.js  valadoc.js
data/styles/: jquery.bubblepopup.v2.3.1.css  jquery.cluetip.css  jquery.tooltip.css  main.css  wikistyle.css
data/templates/: 404.htm.content.tpl  404.htm.navi.tpl  about.htm.content.tpl  markup.htm.content.tpl
documentation/: packages.xml
documentation/accountsservice/: AccountsService-1.0.valadoc.metadata  accountsservice.catalog
documentation/alsa/: alsa.catalog
documentation/atasmart/: atasmart.catalog
documentation/atk/: Atk-1.0.valadoc.metadata  atk.catalog
documentation/atspi-2/: Atspi-2.0.valadoc.metadata
documentation/avahi-client/: avahi-client.catalog
documentation/avahi-gobject/: avahi-gobject.catalog
documentation/babl-0.1/: babl-0.1.catalog
documentation/bzlib/: bzlib.catalog
documentation/cairo/: cairo.catalog
documentation/cairo-xcb/: cairo-xcb.catalog
documentation/ccss-1/: ccss-1.catalog
documentation/champlain-0.12/: Champlain-0.12.valadoc.metadata
documentation/champlain-0.14/: champlain-0.14.catalog
documentation/champlain-gtk-0.12/: GtkChamplain-0.12.valadoc.metadata
documentation/champlain-gtk-0.14/: champlain-gtk-0.14.catalog
documentation/clutter-1.0/: Clutter-1.0.valadoc.metadata  clutter-1.0.catalog
documentation/clutter-gst-1.0/: ClutterGst-1.0.valadoc.metadata  clutter-gst-1.0.catalog
documentation/clutter-gtk-0.10/: clutter-gtk-0.10.catalog
documentation/clutter-gtk-1.0/: GtkClutter-1.0.valadoc.metadata  clutter-gtk-1.0.catalog
documentation/cogl-1.0/: Cogl-1.0.valadoc.metadata  cogl-1.0.catalog
documentation/cogl-pango-1.0/: cogl-pango-1.0.catalog
documentation/colord/: Colord-1.0.valadoc.metadata  colord.catalog
documentation/curses/: curses.catalog  curses.valadoc
documentation/dbus-glib-1/: dbus-glib-1.catalog
documentation/dbusmenu-glib-0.4/: dbusmenu-glib-0.4.catalog
documentation/dbusmenu-gtk3-0.4/: dbusmenu-gtk3-0.4.catalog
documentation/dconf/: dconf.catalog
documentation/dee-1.0/: Dee-1.0.valadoc.metadata
documentation/enchant/: enchant.catalog
documentation/folks-eds/: folks-eds.catalog
documentation/folks-telepathy/: folks-telepathy.catalog
documentation/fuse/: fuse.catalog
documentation/gck-1/: Gck-1.valadoc.metadata
documentation/gconf-2.0/: gconf-2.0.catalog
documentation/gcr-3/: Gcr-3.valadoc.metadata
documentation/gdk-2.0/: gdk-2.0.catalog
documentation/gdk-3.0/: gdk-3.0.catalog
documentation/gdk-pixbuf-2.0/: GdkPixbuf-2.0.valadoc.metadata  gdk-pixbuf-2.0.catalog
documentation/gdk-x11-3.0/: GdkX11-3.0.valadoc.metadata
documentation/gdl-1.0/: Gdl-3.valadoc.metadata
documentation/gdl-3.0/: gdl-3.0.catalog
documentation/gdu/: gdu.catalog
documentation/gdu-gtk/: gdu-gtk.catalog
documentation/gedit/: Gedit-3.0.valadoc.metadata  gedit.catalog
documentation/gee-0.8/: gee-0.8.catalog
documentation/gee-1.0/: gee-1.0.catalog
documentation/geocode-glib-1.0/: GeocodeGlib-1.0.valadoc.metadata
documentation/gio-unix-2.0/: Gio-2.0.valadoc.metadata
documentation/glib-2.0/: GLib-2.0.valadoc.metadata  glib-2.0.valadoc
documentation/gmodule-2.0/: GModule-2.0.valadoc.metadata  gmodule-2.0.catalog
documentation/gnet-2.0/: gnet-2.0.catalog
documentation/gnome-keyring-1/: gnome-keyring-1.catalog
documentation/gnome-vfs-2.0/: gnome-vfs-2.0.catalog
documentation/gnutls/: gnutls.catalog  gnutls.valadoc
documentation/goa-1.0/: Goa-1.0.valadoc.metadata
documentation/gobject-2.0/: GObject-2.0.valadoc.metadata
documentation/gobject-introspection-1.0/: GIRepository-2.0.valadoc.metadata
documentation/goocanvas/: goocanvas.catalog
documentation/grilo-0.2/: Grl-0.2.valadoc.metadata
documentation/grilo-net-0.2/: GrlNet-0.2.valadoc.metadata
documentation/gsl/: gsl.catalog
documentation/gssdp-1.0/: gssdp-1.0.catalog
documentation/gstreamer-allocators-1.0/: GstAllocators-1.0.valadoc.metadata
documentation/gstreamer-base-1.0/: GstBase-1.0.valadoc.metadata
documentation/gstreamer-check-0.10/: gstreamer-check-0.10.catalog
documentation/gstreamer-controller-0.10/: GstController-0.10.valadoc.metadata  gstreamer-controller-0.10.catalog
documentation/gstreamer-riff-1.0/: GstRiff-1.0.valadoc.metadata
documentation/gstreamer-rtp-0.10/: gstreamer-rtp-0.10.catalog
documentation/gstreamer-rtsp-server-1.0/: GstRtspServer-1.0.valadoc.metadata
documentation/gstreamer-video-1.0/: GstVideo-1.0.valadoc.metadata
documentation/gtk+-3.0/: 2-getting-started.valadoc  3-basics.valadoc  4-layout-containers.valadoc  Gtk-3.0.valadoc.metadata  index.valadoc
documentation/gtk-vnc-2.0/: gtk-vnc-2.0.catalog
documentation/gtksourceview-2.0/: gtksourceview-2.0.catalog
documentation/gtksourceview-3.0/: GtkSource-3.0.valadoc.metadata  gtksourceview-3.0.catalog
documentation/gudev-1.0/: gudev-1.0.catalog
documentation/gupnp-1.0/: gupnp-1.0.catalog
documentation/gupnp-dlna-1.0/: GUPnP-DLNA-1.0.valadoc.metadata
documentation/gupnp-dlna-2.0/: GUPnPDLNA-2.0.valadoc.metadata
sphinx/: empty.xml  sphinx.xsl
src/: config.vapi  configgen.vala  doclet.vala  generator.vala  linkhelper.vala  meson.build  valadoc-app-database.vala  valadoc-app.vala  valadoc-example-gen.vala  valadoc-example-parser.vala  valadoc-example-tester.vala  valdoc-example-parser.vala
subprojects/: compose.wrap  glrucache.wrap  valum.wrap
tests/: app-test.js
(+1084 files in other folders)
